# yc-hackathon

./: README.md  browseruse.md  env.example  frontend_README.md  package.json  project_summary.md  tasks.md  vertical_slice_1_completion.md
app/: globals.css  layout.tsx  page.tsx  unified-dashboard.tsx
app/browser-test/: page.tsx
app/components/: CredentialsManager.tsx
app/convex-test/: page.tsx
app/flow-generation-test/: page.tsx
app/logs/[taskId]/: page.tsx
app/streaming-test/: page.tsx
app/test/: page.tsx
backend/: README.md  browser_service.py  config.py  env.example  main.py  models.py  pyproject.toml  requirements.txt  test_env.py  test_server.py
backend/routers/: admin.py
backend/routes/: __init__.py  browser.py  core.py  llm.py
backend/services/: __init__.py  browser_use_cloud_service.py  health_checker.py  llm_service.py  streaming_service.py
components/: FastApiTest.tsx  HealthDashboard.tsx  SimplifiedBrowserTesting.tsx
components/features/: FlowGeneration.tsx  StreamingTest.tsx  __init__.py
components/layout/: Header.tsx
components/ui/: Button.tsx  Card.tsx  Input.tsx
convex/: browserSessions.ts  browserTesting.ts  flows.ts  http.ts  schema.ts  sessionEvents.ts  testRuns.ts  userSessions.ts
convex/_generated/: api.d.ts
docs/: convex-database.md  credentials-system.md  fastapi-backend.md  nextjs-frontend.md
frontend/: README.md  package.json  vertical_slice_2_completion.md
frontend/.tmp/: keyless.json
frontend/app/: page.tsx
frontend/components/: AdminDashboard.tsx  DataTable.tsx
lib/: api.ts
(+1 files in other folders)
