[project]
name = "yc-agent-backend"
version = "2.0.0"
description = "FastAPI backend for YC Agent AI Browser Testing Orchestrator - provides REST API endpoints, health monitoring, and admin operations"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "YC Agent Team"}
]
keywords = ["fastapi", "ai", "browser-testing", "orchestrator", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio-throttle>=1.0.2",
    "browser-use>=0.6.1",
    "fastapi>=0.116.1",
    "openai>=1.99.2",
    "pillow>=11.3.0",
    "playwright>=1.54.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "tenacity>=9.1.2",
    "uvicorn[standard]>=0.35.0",
    "websockets>=15.0.1",
]
